# screen-commentator_win

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  launcher.py  pyproject.toml  start.bat
scripts/: build.ps1  dev-setup.ps1
src/screen_commentator_win/: app.py  capture.py  comment_parser.py  config.py  contracts.py  controller.py  engine.py  gui.py  inference.py  logging_utils.py  models.py  overlay.py  paths.py  personas.py  runtime.py
src/screen_commentator_win.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_comment_parser.py  test_config.py  test_engine.py  test_gui_integration.py  test_inference.py  test_overlay.py  test_paths.py  test_personas.py  test_real_runtime.py  test_runtime.py
